2007-05-29  Alp Toker  <alp.toker@collabora.co.uk>

Reviewed by Mitz.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=13899

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::strokeArc): Use cairo_arc_negative() to fix
        CSS rounded borders.
        (WebCore::GraphicsContext::beginTransparencyLayer):
        (WebCore::GraphicsContext::endTransparencyLayer): save/restore is
        redundant. push/pop group does this implicitly.


Canonical link: https://commits.webkit.org/18254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21882 268f45cc-cd09-0410-ab3c-d52691b4dbfc